--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "¿Í»§¶Ë",
+	"name": "å®¢æˆ·ç«¯",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -10,7 +10,8 @@
 	},
 	"dependencies": {
 		"react": "16.0.0-beta.5",
-		"react-native": "0.49.3"
+		"react-native": "0.49.3",
+		"react-navigation": "^1.0.0-beta.15"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
