--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "客户端",
+	"name": "Forething",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.3",
+		"react-native-fs": "^2.8.4",
 		"react-navigation": "^1.0.0-beta.15"
 	},
 	"devDependencies": {
