--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.3",
 		"react-native-fs": "^2.8.4",
+		"react-native-image-picker": "^0.26.7",
 		"react-navigation": "^1.0.0-beta.15"
 	},
 	"devDependencies": {
