--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
 	"dependencies": {
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.3",
+		"react-native-calendar-component": "^0.1.2",
+		"react-native-calendars": "^1.11.0",
 		"react-native-fs": "^2.8.4",
 		"react-native-image-picker": "^0.26.7",
-		"react-navigation": "^1.0.0-beta.15"
+		"react-native-md5": "^1.0.0",
+		"react-navigation": "^1.0.0-beta.15",
+		"sha1": "^1.1.1"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
