--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "16.0.0-beta.5",
-		"react-native": "0.49.3",
+		"react": "16.2.0",
+		"react-native": "0.53.0",
 		"react-native-calendar-component": "^0.1.2",
 		"react-native-calendars": "^1.11.0",
-		"react-native-fs": "^2.8.4",
+		"react-native-fs": "^2.9.10",
 		"react-native-image-picker": "^0.26.7",
 		"react-native-md5": "^1.0.0",
+		"react-native-swiper": "^1.5.13",
 		"react-navigation": "^1.0.0-beta.15",
 		"sha1": "^1.1.1"
 	},
