--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react-native-calendars": "^1.11.0",
 		"react-native-fs": "^2.9.10",
 		"react-native-image-picker": "^0.26.7",
+		"react-native-material-ripple": "^0.7.5",
 		"react-native-md5": "^1.0.0",
 		"react-native-swiper": "^1.5.13",
 		"react-navigation": "^1.0.0-beta.15",
