--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"dependencies": {
 		"react": "16.2.0",
-		"react-native": "0.53.0",
+		"react-native": "^0.53.0",
 		"react-native-calendar-component": "^0.1.2",
 		"react-native-calendars": "^1.11.0",
 		"react-native-fs": "^2.9.10",
