--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"base-64": "^0.1.0",
 		"react": "16.2.0",
 		"react-native": "^0.53.0",
 		"react-native-calendar-component": "^0.1.2",
