--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
 	"name": "Forething",
+	"description": "SKII At React Native",
+	"main": "lib/index.js",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -9,11 +11,11 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "16.2.0",
-		"react-native": "^0.53.0",
+		"react": "^16.3.0-alpha.2",
+		"react-native": "^0.54.2",
 		"react-native-calendar-component": "^0.1.2",
 		"react-native-calendars": "^1.11.0",
-		"react-native-fs": "^2.9.10",
+		"react-native-fs": "^2.9.11",
 		"react-native-image-picker": "^0.26.7",
 		"react-native-material-ripple": "^0.7.5",
 		"react-native-md5": "^1.0.0",
@@ -23,7 +25,9 @@
 		"sha1": "^1.1.1"
 	},
 	"devDependencies": {
+		"babel-cli": "^6.26.0",
 		"babel-jest": "21.2.0",
+		"babel-preset-flow": "^6.23.0",
 		"babel-preset-react-native": "4.0.0",
 		"jest": "21.2.1",
 		"react-test-renderer": "16.0.0-beta.5"
