--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react-native-material-ripple": "^0.7.5",
 		"react-native-md5": "^1.0.0",
 		"react-native-orientation": "^3.1.3",
+		"react-native-swipeout": "^2.3.3",
 		"react-native-swiper": "^1.5.13",
 		"react-navigation": "^1.0.0-beta.15",
 		"sha1": "^1.1.1"
